lander.lessons.lander.lvl1_lander_101.Lander101.scala.code
def step() {
	setPouseeDesiree(pousee=2)
}